--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@walletconnect/web3-provider": "^1.6.6",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-clipboard.js": "^2.0.16",
@@ -15,7 +16,8 @@
     "react-scripts": "3.4.3",
     "react-tooltip": "^4.2.9",
     "solc": "^0.6.11",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "web3": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
